--- a/index.html
+++ b/index.html
@@ -5,33 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap');
+        </style>
     <title>Marc Alzamora</title>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-900 text-white">
     <div class="w-full flex flex-col items-center">
         <div class="md:grid md:grid-cols-2 flex flex-col items-center mt-20">
             <div class="flex justify-end">
-                <img class="flex h-64 rounded-sm" src="./resources/58323d70-3b75-4a22-a29a-ffb3acb89f22.jpg" alt="">
+                <img class="flex h-64 rounded-md" src="./resources/58323d70-3b75-4a22-a29a-ffb3acb89f22.jpg" alt="">
             </div>
             <div class="flex flex-col items-start max-w-sm space-y-4 pl-10">
-                <h3 class="font-bold">MARC ALZAMORA</h3>
-                <span class="font-bold">Software Developer</span>
+                <h3 class="font-bold text-xl">MARC ALZAMORA</h3>
+                <span class="font-bold text-lg">Software Developer</span>
                 <span class="flex">
-                    <a href="./resources/Resume.pdf" download class='mr-2 py-1 px-2 bg-white rounded-md active:scale-95'>Resume</a>
-                    <a href="https://www.linkedin.com/in/marc-alzamora" target='_blank' rel='noreferrer' class="flex items-center mr-2 py-1 px-2 rounded-md text-white bg-sky-500 active:scale-95">
+                    <a href="./resources/Resume.pdf" download class='mr-2 py-1 px-2 bg-white text-gray-800 font-bold rounded-md active:scale-95'>Resume</a>
+                    <a href="https://www.linkedin.com/in/marc-alzamora" target='_blank' rel='noreferrer' class="flex font-bold items-center mr-2 py-1 px-2 rounded-md text-white bg-sky-500 active:scale-95">
                         LinkedIn
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
                         </svg>
                       </a>
-                    <a href="https://www.github.com/manzcube" target='_blank' rel='noreferrer' class="flex items-center mr-2 py-1 px-2 rounded-md text-white bg-purple-400 active:scale-95">
+                    <a href="https://www.github.com/manzcube" target='_blank' rel='noreferrer' class="flex font-bold items-center mr-2 py-1 px-2 rounded-md text-white bg-purple-400 active:scale-95">
                         Github
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
                         </svg>
                       </a>                
                 </span>
-                <span>
+                <span class="rounded-lg p-2 bg-neutral-800">
                     <p class="font-bold">Description:</p> 
                     I would describe myself as an inquisitive, problem-solver, and 
                     organized person who loves coding and Rubik's cube! Currently 
@@ -42,7 +45,7 @@
         <div class="grid grid-cols-2 md:space-x-20">
             <div class="w-full mt-20 flex flex-col items-center">
                 <h2 class="font-bold">Skills</h2>
-                <ul>
+                <ul class="rounded-lg p-2 bg-neutral-800">
                     <li>- Discipline</li>
                     <li>- Goal-oriented</li>
                     <li>- Time management</li>
@@ -52,7 +55,7 @@
             </div>
             <div class="w-full mt-20 flex flex-col items-center">
                 <h2 class="font-bold">Tech</h2>
-                <ul>
+                <ul class="rounded-lg p-2 bg-neutral-800">
                     <li>- React</li>
                     <li>- JavaScript</li>
                     <li>- ExpressJS</li>
@@ -67,8 +70,8 @@
             </div>
         </div>
         <div class="w-full mt-20 xl:px-44 flex flex-col items-center">
-            <h2 class="font-bold mb-10">Projects</h2>
-            <div class="flex-col md:flex-row md:flex mb-20 items-center">
+            <h2 class="font-bold mb-10 text-xl">Projects</h2>
+            <div class="flex-col md:flex-row md:flex mb-20 items-center rounded-lg px-2 bg-neutral-800">
                 <img src="https://user-images.githubusercontent.com/88792194/211307622-c143e32c-084d-4145-8982-c06fe799d760.png" alt="" class="flex h-44">
                 <div class="p-5 max-w-md">
                     <h3 class="font-bold">Trading Blog</h3>
@@ -84,7 +87,7 @@
                     </a>
                 </div>
             </div>
-            <div class="flex-col md:flex-row md:flex mb-20 items-center">
+            <div class="flex-col md:flex-row md:flex mb-20 items-center rounded-lg px-2 bg-neutral-800">
                 <img src="https://user-images.githubusercontent.com/88792194/152976693-abe2e695-2ffb-4300-96ff-c9527bb31740.png" alt="" class="flex h-44">
                 <div class="p-5 max-w-md">
                     <h3 class="font-bold">Campgrounds Ecommerce</h3>
@@ -100,7 +103,7 @@
                     </a>
                 </div>
             </div>
-            <div class="flex-col md:flex-row md:flex mb-20 items-center">
+            <div class="flex-col md:flex-row md:flex mb-20 items-center rounded-lg px-2 bg-neutral-800">
                 <img src="https://user-images.githubusercontent.com/88792194/154122715-a53f1fd4-9846-4e1e-9d2a-6cd9fe83fbc3.png" alt="" class="flex h-44">
                 <div class="p-5 max-w-md">
                     <h3 class="font-bold">Youtube React API</h3>
