--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p class="font-bold">Description:</p> 
                     I would describe myself as an inquisitive, problem-solver, and 
                     organized person who loves coding and Rubik's cube! Currently 
-                    seeking a position in Europe where to relocate.
+                    seeking a FullStack position in Europe where to relocate.
                 </span>
             </div>
         </div>
@@ -57,6 +57,7 @@
                 <h2 class="font-bold">Tech</h2>
                 <ul class="rounded-lg p-2 bg-neutral-800">
                     <li>- React</li>
+                    <li>- ReduxJs</li>
                     <li>- JavaScript</li>
                     <li>- ExpressJS</li>
                     <li>- Node</li>
@@ -79,7 +80,7 @@
                         React + ReduxToolkit & NodeJS + MongoDB. Tailwind as CSS framework. Auth with JWT, authorization, authentication. Using RTK Query as proxy API.
                         Create, read, edit & delete Activities, Workers, Roles and Notes. UX for drag&drop components in Today schema.
                     </p>
-                    <a href="https://github.com/manzcube/MIDO" target="_blank" rel="noreferrer" class="flex mt-2 items-center text-purple-500 hover:underline">
+                    <a href="https://github.com/manzcube/MIDO" target="_blank" rel="noreferrer" class="flex mt-2 items-center text-purple-300 hover:underline">
                         Check the code on github
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
@@ -95,7 +96,7 @@
                         React + Firebase. Consuming Auth, Firestore and Storage services from Firebase. Tailwind as CSS framework. The user can sign in/out,
                         write message in the chat, and crud operations with posts and comments. Bookmarked system and some 3rd party api for news retrievemnt.
                     </p>
-                    <a href="https://github.com/manzcube/Trading-blog" target="_blank" rel="noreferrer" class="flex mt-2 items-center text-purple-500 hover:underline">
+                    <a href="https://github.com/manzcube/Trading-blog" target="_blank" rel="noreferrer" class="flex mt-2 items-center text-purple-300 hover:underline">
                         Check the code on github
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
@@ -111,7 +112,7 @@
                         REST apis for creating, updating, reading and deleting camprounds, users and reviews.
                         Consuming various 3rd party apis like mapbox, cloudinary, passport, etc.
                     </p>
-                    <a href="https://github.com/manzcube/yelp-camp" target="_blank" rel="noreferrer" class="flex mt-2 items-center text-purple-500 hover:underline">
+                    <a href="https://github.com/manzcube/yelp-camp" target="_blank" rel="noreferrer" class="flex mt-2 items-center text-purple-300 hover:underline">
                         Check the code on github
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
@@ -126,7 +127,7 @@
                     <p>React app, consuming google cloud youtube api, based on searchbar input.
                         Using and creating custom Hooks.
                     </p>
-                    <a href="https://github.com/manzcube/videos-react-app" target="_blank" rel="noreferrer" class="flex mt-2 items-center text-purple-500 hover:underline">
+                    <a href="https://github.com/manzcube/videos-react-app" target="_blank" rel="noreferrer" class="flex mt-2 items-center text-purple-300 hover:underline">
                         Check the code on github
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
