--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
                 <h3 class="font-bold text-xl">MARC ALZAMORA</h3>
                 <span class="font-bold text-lg">Software Developer</span>
                 <span class="flex">
-                    <a href="./resources/Resume.pdf" download class='mr-2 py-1 px-2 bg-white text-gray-800 font-bold rounded-md active:scale-95'>Resume</a>
+                    <a href="./resources/Resume.pdf" download class='flex font-bold items-center mr-2 py-1 px-2 bg-white text-gray-800 rounded-md active:scale-95'>
+                        Resume
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15M9 12l3 3m0 0l3-3m-3 3V2.25" />
+                        </svg>                        
+                    </a>
                     <a href="https://www.linkedin.com/in/marc-alzamora" target='_blank' rel='noreferrer' class="flex font-bold items-center mr-2 py-1 px-2 rounded-md text-white bg-sky-500 active:scale-95">
                         LinkedIn
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
