--- a/index.html
+++ b/index.html
@@ -77,6 +77,21 @@
         </div>
         <div class="w-full mt-20 xl:px-44 flex flex-col items-center">
             <h2 class="font-bold mb-10 text-xl">Projects</h2>
+            <div class="flex-col md:flex-row md:flex mb-20 items-center rounded-lg py-4 px-2 bg-neutral-800">
+                <img src="./resources/skualo.png" alt="" class="flex h-44">
+                <div class="p-5 max-w-md">
+                    <h3 class="font-bold">Diving Center</h3>
+                    <p>
+                        React + Tailwindcss diving center for SKUALO. Working on components reusability and best approach to a better UX.
+                    </p>
+                    <!-- <a href="https://github.com/manzcube/MIDO" target="_blank" rel="noreferrer" class="flex mt-2 items-center text-purple-300 hover:underline">
+                        Check the code on github
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
+                        </svg>
+                    </a> -->
+                </div>
+            </div>
             <div class="flex-col md:flex-row md:flex mb-20 items-center rounded-lg px-2 bg-neutral-800">
                 <img src="https://user-images.githubusercontent.com/88792194/217096028-9aecf65f-a7c1-4eb9-a0d9-cb26fdacdf4d.png" alt="" class="flex h-44">
                 <div class="p-5 max-w-md">
