--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./build/index.css">
     <title>Marc Alzamora</title>
 </head>
 <body>
@@ -17,17 +17,17 @@
                 <h1 class="name">MARC ALZAMORA</h1>
                 <h2 class="title">FullStack Developer</h2>
                 <div class="btns">
-                    <a href="./resources/Resume.pdf" download class='flex font-bold items-center mr-2 py-1 px-2 bg-white text-gray-800 rounded-md active:scale-95'>
+                    <a href="./resources/Resume.pdf" download >
                         Download Resume                     
                     </a>
-                    <a href="https://www.linkedin.com/in/marc-alzamora" target='_blank' rel='noreferrer' class="flex font-bold items-center mr-2 py-1 px-2 rounded-md text-white bg-sky-500 active:scale-95">
+                    <a href="https://www.linkedin.com/in/marc-alzamora" target='_blank' rel='noreferrer'>
                         LinkedIn
                     </a>
-                    <a href="https://www.github.com/manzcube" target='_blank' rel='noreferrer' class="flex font-bold items-center mr-2 py-1 px-2 rounded-md text-white bg-purple-400 active:scale-95">
+                    <a href="https://www.github.com/manzcube" target='_blank' rel='noreferrer'>
                         Github
                     </a>                
                 </div>
-                <div>
+                <div class="description">
                     <p>Description:</p> 
                     I would describe myself as an inquisitive, problem-solver, and 
                     organized person who loves coding and Rubik's cube! Currently 
@@ -37,31 +37,31 @@
             
         </div>
         <div class="section2">
-            <div class="lists">
+            <div>
                 <h2>Skills</h2>
-                <ul>
-                    <li>- Discipline</li>
-                    <li>- Goal-oriented</li>
-                    <li>- Time management</li>
-                    <li>- Mathematical background</li>
-                    <li>- Learning strategies</li>
-                </ul>
+                <div>
+                    <p>- Discipline</p>
+                    <p>- Goal-oriented</p>
+                    <p>- Time management</p>
+                    <p>- Mathematical background</p>
+                    <p>- Learning strategies</p>
+                </div>
             </div>
-            <div class="lists">
+            <div>
                 <h2>Tech</h2>
-                <ul>
-                    <li>- React</li>
-                    <li>- ReduxJs</li>
-                    <li>- JavaScript</li>
-                    <li>- ExpressJS</li>
-                    <li>- Node</li>
-                    <li>- MongoDB</li>
-                    <li>- HTML/CSS</li>
-                    <li>- Firebase Cloud</li>
-                    <li>- Tailwindcss</li>
-                    <li>- Bootstrap</li>
-                    <li>- Python</li>
-                </ul>
+                <div>
+                    <p>- React</p>
+                    <p>- ReduxJs</p>
+                    <p>- JavaScript</p>
+                    <p>- ExpressJS</p>
+                    <p>- Node</p>
+                    <p>- MongoDB</p>
+                    <p>- HTML/CSS</p>
+                    <p>- Firebase Cloud</p>
+                    <p>- Tailwindcss</p>
+                    <p>- Bootstrap</p>
+                    <p>- Python</p>
+                </div>
             </div>
         </div>
         
@@ -73,7 +73,8 @@
                 <div class="text">
                     <h3>Diving Center</h3>
                     <p>
-                        React + Tailwindcss diving center for SKUALO. Working on the UI now, implementing Fareharbour apis for booking service. Reusability and best approach to a better UX.
+                        React + Tailwindcss diving center for SKUALO. Activities, Diving and Courses. Booking integrated, contact forms sends gmails, 4 languages 
+                        established. Made a reduxJs store, and json files containing respective text for each language. Reusability for Service component and full responsiveness.
                     </p>
                 </div>
             </div>
