--- a/index.html
+++ b/index.html
@@ -73,9 +73,15 @@
                 <div class="text">
                     <h3>Diving Center</h3>
                     <p>
-                        React + Tailwindcss diving center for SKUALO. Activities, Diving and Courses. Booking integrated, contact forms sends gmails, 4 languages 
-                        established. Made a reduxJs store, and json files containing respective text for each language. Reusability for Service component and full responsiveness.
+                        React + Tailwindcss diving center for SKUALO. Activities, Diving and Courses. Booking software api linked, contact forms sends gmails, 4 languages 
+                        configured with a reduxJs store, then json files containing respective text for each language. Reusability and responsiveness.
                     </p>
+                    <a href="https://skualo-8badb.web.app" target="_blank" rel="noreferrer">
+                        Check the website
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
+                        </svg>
+                    </a>
                 </div>
             </div>
             <div class="project workflow">
